--- a/package.json
+++ b/package.json
@@ -2,17 +2,34 @@
   "name": "react-weather-app",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://Amansajwan14.github.io/weather-react-app",
+  "description": "",
+  "bugs": {
+    "url": "https://github.com/Amansajwan14/weather-react-app/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Amansajwan14/weather-react-app.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "axios": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   },
   "browserslist": {
     "production": [
